# gdrnpp_bop2022

./: CMakeCache.txt
configs/_base_/: common_base.py  gdrn_base.py
configs/gdrn/ycbv/: convnext_a6_AugCosyAAEGray_BG05_mlL1_DMask_amodalClipBox_classAware_ycbv.py
core/gdrn_modeling/: main_gdrn.py
core/gdrn_modeling/datasets/: data_loader.py  data_loader_online.py  dataset_factory.py  ycbv_d2.py  ycbv_pbr.py
core/gdrn_modeling/engine/: engine.py  engine_utils.py
core/utils/: data_utils.py  default_args_setup.py
lib/egl_renderer/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/pysixd/: dataset_params.py
lib/pysixd/scripts/: eval_calc_errors.py
my_results/: results_2023-05-08_12-57-01.json  results_2023-05-13_13-55-54.json  results_2023-05-16_15-38-07.json  results_2023-05-16_15-43-39.json
my_work/: convert_results.py  inventory_images.py  my_run_script.sh  new_inventory_images.py
ref/: __init__.py  ycbv.py
requirements/: requirements.txt
